feat(1.19.2): update to 1.19.2